# Agi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_LITE.md  audit.py  install_remote_peer.sh  night_learn.py  run.py
configs/: core.toml  resonance_scales.toml  symbols.toml
core/: affective_state.py  agency_channel.py  analog_engine.py  audio_sensor.py  causal_engine.py  chain_engine.py  concept_graph.py  consciousness_glyphs.py  consciousness_loop.py  cosmic_constants.py  creator_identity.py  crypto_core.py  curiosity.py  curiosity_fetcher.py  definition_extractor.py  dialogue_context.py  dream_core.py  first_person.py  frame_engine.py  generator.py  goal_engine.py  grounded_vocabulary.py  grounding_torus.py  hybrid_compute.py  info_primitives.py  inner_dialogue.py  junk_filter.py  lang_detect.py  learner.py  logos_brain.py  memory_core.py  meta_core.py  paragraph_engine.py  peer_channel.py  peer_crypto.py  peer_network.py  phase_space.py  phase_torus.py  phi_btc_miner.py  phi_sym_bridge.py  (+28 more)
docs/: logos_agi_book_full.txt  logos_agi_snapshot_all.txt  snapshot_filelist.txt
phi_resonance/: __init__.py  dynamical_brain.py  observables.py  oscillator_network.py  phase_torus_dynamic.py  symbol_binding.py
scripts/: deploy_oracle.sh  fast_sha.py  phi_btc_daemon.py  phi_btc_real.py  phi_miner_c.c  phi_pure_emit.py
src/: config.rs  main.rs
src/core/: engine.rs  errors.rs  mod.rs  state.rs  time.rs
src/dreaming/: mod.rs
src/introspection/: mod.rs
src/io_layer/: mod.rs
src/logging/: mod.rs
src/resonance/: mod.rs  scales.rs
src/self_core/: mod.rs
(+4 files in other folders)
